feat: add status API
